WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282109
Fix TestWebKitAPI.WebKit.InterruptionBetweenSameProcessPages in debug builds
https://bugs.webkit.org/show_bug.cgi?id=282109
Summary
Fix TestWebKitAPI.WebKit.InterruptionBetweenSameProcessPages in debug builds
Alex Christensen
Reported
2024-10-25 11:43:46 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-25 11:43:58 PDT
<
rdar://problem/138651693
>
Alex Christensen
Comment 2
2024-10-25 11:45:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35731
EWS
Comment 3
2024-10-25 15:13:12 PDT
Committed
285717@main
(c7a8e50690ab): <
https://commits.webkit.org/285717@main
> Reviewed commits have been landed. Closing PR #35731 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug