Source/WebKit/WebProcess/GPU/webrtc/AudioMediaStreamTrackRendererInternalUnitManager.cpp
@@ -48,7 +48,7 @@
 
 namespace WebKit {
 
-class AudioMediaStreamTrackRendererInternalUnitManagerProxy final : public WebCore::AudioMediaStreamTrackRendererInternalUnit, public RefCountedAndCanMakeWeakPtr<AudioMediaStreamTrackRendererInternalUnitManagerProxy>, public Identified<AudioMediaStreamTrackRendererInternalUnitIdentifier> {
+class AudioMediaStreamTrackRendererInternalUnitManagerProxy final : public WebCore::AudioMediaStreamTrackRendererInternalUnit, public ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<AudioMediaStreamTrackRendererInternalUnitManagerProxy>, public Identified<AudioMediaStreamTrackRendererInternalUnitIdentifier> {
     WTF_MAKE_TZONE_ALLOCATED(AudioMediaStreamTrackRendererInternalUnitManagerProxy);
 public:
     static Ref<AudioMediaStreamTrackRendererInternalUnitManagerProxy> create(Client& client)
@@ -58,8 +58,8 @@ public:
 
     ~AudioMediaStreamTrackRendererInternalUnitManagerProxy();
 
-    void ref() const final { RefCounted::ref(); }
-    void deref() const final { RefCounted::deref(); }
+    void ref() const final { ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr::ref(); }
+    void deref() const final { ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr::deref(); }
 
     enum class IsClosed : bool { No, Yes };
     void reset(IsClosed);
@@ -80,7 +80,7 @@ private:
     void startThread();
     void createRemoteUnit();
 
-    WeakPtr<Client> m_client;
+    ThreadSafeWeakPtr<Client> m_client;
 
     Deque<CompletionHandler<void(std::optional<WebCore::CAAudioStreamDescription>)>> m_descriptionCallbacks;
 
@@ -119,15 +119,18 @@ Ref<WebCore::AudioMediaStreamTrackRendererInternalUnit> createRemoteAudioMediaSt
 
 void AudioMediaStreamTrackRendererInternalUnitManager::reset(AudioMediaStreamTrackRendererInternalUnitIdentifier identifier)
 {
-    if (auto proxy = m_proxies.get(identifier))
+    auto weakProxy = m_proxies.get(identifier);
+    if (RefPtr proxy = weakProxy.get())
         proxy->reset(AudioMediaStreamTrackRendererInternalUnitManagerProxy::IsClosed::No);
 }
 
 void AudioMediaStreamTrackRendererInternalUnitManager::restartAllUnits()
 {
     auto proxies = std::exchange(m_proxies, { });
-    for (auto proxy : proxies.values())
-        proxy->reset(AudioMediaStreamTrackRendererInternalUnitManagerProxy::IsClosed::Yes);
+    for (auto weakProxy : proxies.values()) {
+        if (RefPtr proxy = weakProxy.get())
+            proxy->reset(AudioMediaStreamTrackRendererInternalUnitManagerProxy::IsClosed::Yes);
+    }
 }
 
 WTF_MAKE_TZONE_ALLOCATED_IMPL(AudioMediaStreamTrackRendererInternalUnitManagerProxy);
@@ -150,9 +153,9 @@ AudioMediaStreamTrackRendererInternalUnitManagerProxy::~AudioMediaStreamTrackRen
 
 void AudioMediaStreamTrackRendererInternalUnitManagerProxy::createRemoteUnit()
 {
-    WebProcess::singleton().ensureGPUProcessConnection().connection().sendWithAsyncReply(Messages::RemoteAudioMediaStreamTrackRendererInternalUnitManager::CreateUnit { identifier() }, [weakThis = WeakPtr { *this }](auto&& description, auto frameChunkSize) {
-        if (weakThis && description && frameChunkSize)
-            weakThis->initialize(*description, frameChunkSize);
+    WebProcess::singleton().ensureGPUProcessConnection().connection().sendWithAsyncReply(Messages::RemoteAudioMediaStreamTrackRendererInternalUnitManager::CreateUnit { identifier() }, [weakThis = ThreadSafeWeakPtr { *this }](auto&& description, auto frameChunkSize) {
+        if (RefPtr protectedThis = weakThis.get(); protectedThis && description && frameChunkSize)
+            protectedThis->initialize(*description, frameChunkSize);
     }, 0);
 }
 
@@ -241,30 +244,33 @@ void AudioMediaStreamTrackRendererInternalUnitManagerProxy::startThread()
 {
     ASSERT(!m_thread);
     m_shouldStopThread = false;
-    auto threadLoop = [this]() mutable {
-        RefPtr client = m_client.get();
+    auto threadLoop = [weakThis = ThreadSafeWeakPtr { *this }] mutable {
+        RefPtr protectedThis = weakThis.get();
+        if (!protectedThis)
+            return;
+        RefPtr client = protectedThis->m_client.get();
         if (!client)
             return;
 
-        m_writeOffset = 0;
+        protectedThis->m_writeOffset = 0;
         do {
             // If wait fails, the semaphore on the other side was probably destroyed and we should just exit here and wait to launch a new thread.
-            if (!m_semaphore->wait())
+            if (!protectedThis->m_semaphore->wait())
                 break;
-            if (m_shouldStopThread)
+            if (protectedThis->m_shouldStopThread)
                 break;
 
-            auto& bufferList = *m_buffer->list();
+            auto& bufferList = *protectedThis->m_buffer->list();
 
             AudioUnitRenderActionFlags flags = 0;
-            client->render(m_frameChunkSize, bufferList, m_writeOffset, mach_absolute_time(), flags);
+            client->render(protectedThis->m_frameChunkSize, bufferList, protectedThis->m_writeOffset, mach_absolute_time(), flags);
 
             if (flags == kAudioUnitRenderAction_OutputIsSilence)
-                WebCore::AudioSampleBufferList::zeroABL(bufferList, static_cast<size_t>(m_frameChunkSize * m_description->bytesPerFrame()));
+                WebCore::AudioSampleBufferList::zeroABL(bufferList, static_cast<size_t>(protectedThis->m_frameChunkSize * protectedThis->m_description->bytesPerFrame()));
 
-            m_ringBuffer->store(&bufferList, m_frameChunkSize, m_writeOffset);
-            m_writeOffset += m_frameChunkSize;
-        } while (!m_shouldStopThread);
+            protectedThis->m_ringBuffer->store(&bufferList, protectedThis->m_frameChunkSize, protectedThis->m_writeOffset);
+            protectedThis->m_writeOffset += protectedThis->m_frameChunkSize;
+        } while (!protectedThis->m_shouldStopThread);
     };
     m_thread = Thread::create("AudioMediaStreamTrackRendererInternalUnit thread"_s, WTFMove(threadLoop), ThreadType::Audio, Thread::QOS::UserInteractive);
 }
